--- a/EDD_Proyecto2/src/edd_proyecto2/VentanaUsuario.form
+++ b/EDD_Proyecto2/src/edd_proyecto2/VentanaUsuario.form
@@ -58,18 +58,6 @@
                       </Group>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                      <Component id="lbBiblioteca" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="lbCrearLibro" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="lbCrearCategoria" alignment="0" max="32767" attributes="0"/>
-                                  </Group>
-                                  <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="btnCrearCategoria" max="32767" attributes="0"/>
-                                      <Component id="btnAgregarLibro" max="32767" attributes="0"/>
-                                  </Group>
-                              </Group>
                               <Group type="102" alignment="0" attributes="0">
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="btnVerCategorias" alignment="0" max="32767" attributes="0"/>
@@ -81,6 +69,22 @@
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="jScrollPane1" min="-2" pref="590" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                      <Component id="lbEliminarLibro" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="jLabel1" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="lbBiblioteca" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="lbCrearLibro" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="lbCrearCategoria" alignment="0" max="32767" attributes="0"/>
+                                  </Group>
+                                  <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Component id="btnCrearCategoria" max="32767" attributes="0"/>
+                                      <Component id="btnAgregarLibro" max="32767" attributes="0"/>
+                                      <Component id="btnEdit" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="btnEliminarCategoria" alignment="0" max="32767" attributes="0"/>
+                                  </Group>
                               </Group>
                           </Group>
                           <EmptySpace min="0" pref="22" max="32767" attributes="0"/>
@@ -99,17 +103,27 @@
                       <Component id="lbUsuario" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="lbCarnetUsuario" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnEdit" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lbCrearCategoria" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btnCrearCategoria" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="lbEliminarLibro" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnEliminarCategoria" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="lbCrearLibro" min="-2" max="-2" attributes="0"/>
                       <Component id="btnAgregarLibro" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="176" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="134" max="-2" attributes="0"/>
                   <Component id="lbBiblioteca" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -243,6 +257,26 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnHashReporteActionPerformed"/>
           </Events>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel1">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Editar Datos"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnEdit">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Editar Datos"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="lbEliminarLibro">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Eliminar una Categoria "/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnEliminarCategoria">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Eliminar Categoria"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
