--- a/EDD_Proyecto2/src/edd_proyecto2/CargaMasivaUsuarios.form
+++ b/EDD_Proyecto2/src/edd_proyecto2/CargaMasivaUsuarios.form
@@ -60,10 +60,7 @@
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="btnRegistrarDatos" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="104" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="btnRegistrarDatos" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="txtNombreArchivo" max="32767" attributes="0"/>
                                   <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
